--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   dropdown_button2: ^1.8.8
   intl: ^0.17.0
   cached_network_image: ^3.2.2
+  jitsi_meet:
+    git:
+      url: https://github.com/dispersik/jitsi_meet_fork
+      ref: master
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -98,6 +103,8 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  assets:
+    - assets/images/
 
   fonts:
     - family: Playfair Display
