--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,7 @@ dependencies:
   dropdown_button2: ^1.8.8
   intl: ^0.17.0
   cached_network_image: ^3.2.2
-  jitsi_meet:
-    git:
-      url: https://github.com/dispersik/jitsi_meet_fork
-      ref: master
+  jitsi_meet: ^4.0.0
   uuid: ^3.0.6
 
 dev_dependencies:
