--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   podcast_search: ^0.5.1
   just_audio: ^0.9.30
   audio_video_progress_bar: ^0.11.0
+  path_provider: ^2.0.11
+  flutter_downloader: ^1.9.0
+  sqflite: ^2.2.0+3
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
