--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_downloader: ^1.9.0
   sqflite: ^2.2.0+3
   path: ^1.8.2
+  android_alarm_manager_plus: ^2.1.0
 
 dev_dependencies:
   flutter_test:
